--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "dice-roll",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/server.js",
+  "main": "lib/server.js",
+  "types": "lib/server.d.ts",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
@@ -13,11 +14,12 @@
     "typescript": "^3.8.2"
   },
   "scripts": {
+    "prepare": "npm run build",
     "build": "./node_modules/typescript/bin/tsc",
     "watch": "./node_modules/typescript/bin/tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/server.js",
-    "nodemon": "./node_modules/nodemon/bin/nodemon.js dist/server.js"
+    "start": "node lib/server.js",
+    "nodemon": "./node_modules/nodemon/bin/nodemon.js lib/server.js"
   },
   "repository": {
     "type": "git",
