--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.46",
     "@types/express": "^4.17.2",
     "nodemon": "^2.0.2",
     "typescript": "^3.8.2"
